fix user record page truncating title

--- a/src/main/webapp/stylesheet/main.css
+++ b/src/main/webapp/stylesheet/main.css
@@ -647,6 +647,10 @@ video {
   height: 300px;
 }
 
+.h-\[450px\] {
+  height: 450px;
+}
+
 .h-\[60px\] {
   height: 60px;
 }
@@ -661,10 +665,6 @@ video {
 
 .h-svh {
   height: 100svh;
-}
-
-.h-\[450px\] {
-  height: 450px;
 }
 
 .w-1\/5 {
@@ -716,29 +716,29 @@ video {
   width: 100%;
 }
 
-.max-w-min {
-  max-width: -moz-min-content;
-  max-width: min-content;
+.max-w-\[13rem\] {
+  max-width: 13rem;
 }
 
-.max-w-\[15rem\] {
-  max-width: 15rem;
+.max-w-\[20rem\] {
+  max-width: 20rem;
 }
 
 .max-w-\[8rem\] {
   max-width: 8rem;
 }
 
-.max-w-\[10rem\] {
-  max-width: 10rem;
+.max-w-min {
+  max-width: -moz-min-content;
+  max-width: min-content;
 }
 
-.max-w-\[12rem\] {
-  max-width: 12rem;
+.max-w-\[30rem\] {
+  max-width: 30rem;
 }
 
-.max-w-\[13rem\] {
-  max-width: 13rem;
+.max-w-\[35rem\] {
+  max-width: 35rem;
 }
 
 .grow {
@@ -826,6 +826,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -836,12 +842,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-auto {
@@ -1195,16 +1195,6 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.before\:invisible::before {
-  content: var(--tw-content);
-  visibility: hidden;
-}
-
-.before\:content-\[\'\'\]::before {
-  --tw-content: '';
-  content: var(--tw-content);
 }
 
 .hover\:bg-primary:hover {
